--- a/hub.html
+++ b/hub.html
@@ -84,7 +84,7 @@ margin-bottom: 100px;
         <div class=»footer»> <div class=»container»><span class=»sub»>выйти из | <a href=index.html>«аккаунта»</a></span></div>
         <div class=»footer»> <div class=»container»><span class=»sub»>maknau80 | <a href=l.html>«перейти»</a></span></div>
         <div class=»footer»> <div class=»container»><span class=»sub»>music player | <a href=music.html>«перейти»</a></span></div>
-        <div class=»footer»> <div class=»container»><span class=»sub»>Тян community | | <a href=tjan.html>«перейти»</a></span></div>
+        <div class=»footer»> <div class=»container»><span class=»sub»>Owl's hub | <a href=tjan.html>«перейти»</a></span></div>
 <div class=»footer»> <div class=»container»><span class=»sub»>© Все права защищены <a href=hub.html>ООО «maknau80 hub»</a> 2020</span></div>
 
 <script type="text/javascript">
