--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             {
                 var x = document.getElementById("L").value;
-                if(x == "maknau80") {
+                if(x == "Lalka666") {
                     document.getElementById("tx").innerHTML= x;
                     document.location.href = 'profil.html';}
                 if(x == "user") {
