--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <div id="logo" onclick="slowScroll('#top')">
     </body>
     <h1>LOGIN</h1>
-    <h2>Username</h2> <input type="text" id="L">
+    <h2>Username</h2> <input type="password" id="L">
             <br>
             <br>
             <button onclick="exe()"> Login</button>
