--- a/reg.html
+++ b/reg.html
@@ -12,6 +12,7 @@
 <b>Для входа на сайт вам нужно ввести секретное имя пользователя.</b>
 <b>Для получения имяни пользователя, перейдите по ссылке ниже, и напишите в лс администратору "Хочу логин"</b>
 <li>Ссылка: <a href="https://vk.com/maknau80" target="_blank">администратор</a> </li>
+Или напишите в дискорд: maknau80#3099
         <br>
         <hr>
         <br>
