--- a/tjan.html
+++ b/tjan.html
@@ -17,6 +17,8 @@
     <br>
     %help     | Список команд
     <br>
+    %botinfo  | Инфо о боте
+    <br>
     %say      | Сказать
     <br>
     %profile  | Профиль
@@ -36,6 +38,10 @@
     %piar   | Пиар в лс
     <br>
     %serverinfo | Инфо о сервере
+    <br>
+    %online | Количество пользователей
+    <br>
+    %servers | Количество серверов 
     <br>
     <br>
     <hr>
