--- a/tjan.html
+++ b/tjan.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Тян community</title>
+        <title>Owl community</title>
         <link rel="stylesheet" href="">
         <link rel="stylesheet" href="csslog/l.css">
         <meta charset="UTF-8">
