--- a/hub.html
+++ b/hub.html
@@ -81,7 +81,7 @@ ul {
     </style>
     <body>
         <h1>Добро пожаловать на сайт maknau80 hub!</h1>
-        <p><b>ALPHA BUILD V0.8.3!</b></p>
+        <p><b>V1.1!</b></p>
         <hr>
         
         </a>
@@ -110,7 +110,7 @@ ul {
 
 <hr><br><br><br><br><br><br><br><br><br><h2>Тут пока ничего нет :)</h2><br><br><br><br><br><br><br><br><hr><br>
 
-<div class=»footer»> <div class=»container»><span class=»sub»>© Все права защищены <a href=hub.html>ООО «maknau80 hub»</a> 2020</span></div>
+<div class=»footer»> <div class=»container»><span class=»sub»>© Все права защищены <a href=hub.html>ООО «maknau80 hub»</a> 2019-2020</span></div>
 
 <script type="text/javascript">
 var OpenOrLock = 0;
