--- a/tjan.html
+++ b/tjan.html
@@ -29,7 +29,7 @@
     <br>
     %bug | Сообщить о баге
     <br>
-    %hug | Обнять пользователя
+    %hosting | Инфа о хостинге
     <br>
     %invite | Ссылка на бота
     <br>
@@ -48,6 +48,7 @@
     <br>
 
     <h2>Команды доступные администраторам</h2>
+    Вот список команд модерации:
     <br>
     %clear | Удалить сообщения 
     <br>
@@ -83,6 +84,13 @@
     <br>
     %new   | Сообщить о обновлении
     <br>
+    %settings | Как настроить бота
+    <br>
+    <br>
+    <hr>
+    <br>
+    Вот команды сервера Broken
+    <br>
     %vacation | Дать отпуск 
     <br>
     %anket | Ответить на анкету
@@ -95,6 +103,11 @@
     <br>
     %nick  | Сообщение "смени ник"
     <br>
+    <br>
+    <br>
+    <br>
+    Вот команды цветного текста
+    <br>
     %redsay | Отправить сообщение red
     <br>
     %bluesay | Отправить сообщение blue
@@ -103,24 +116,52 @@
     <br>
     %greensay | Отправить сообщение green
     <br>
-    Шишкой в @ник
-    <br>
-    Тапком в @ник
-    <br>
-    Хочу орех для @ник
-    <br>
-    Хочу печеньку для @ник
-    <br>
-    волшебного пендаля @ник
-    <br>
-    треснуть @ник 
-    <br>
-    кусь @ник
-    <br>
-    ням</b></h4>
     <br>
     <br>
-    <hr>
+    <br>
+    Развлекательные команды
+    <br>
+    %шишкой в @ник
+    <br>
+    %тапком в @ник
+    <br>
+    %хочу орех для @ник
+    <br>
+    %хочу печеньку для @ник
+    <br>
+    %волшебного пендаля @ник
+    <br>
+    %треснуть @ник 
+    <br>
+    %кусь @ник
+    <br>
+    %пиздюлей @ник 
+    <br>
+    %хочу чОй
+    <br>
+    %хочу пиво
+    <br>
+    %по жопе @ник
+    <br>
+    <br>
+    <br>
+    <br>
+    Прикольные команды
+    <br>
+    %waifu | На сколько бот тебя любит
+    <br>
+    %love | На сколько ты любишь юзера
+    <br>
+    %hug | Обнять пользователя
+    <br>
+    %kiss | Поцеловать пользователя
+    <br>
+    %active | Вероятность актива
+    <br>
+    %hentai | Хентайчик 
+    <br>
+    <br>
+    <br>
     <br>
     <h3>Что-бы пригласть нашего бота, зайдите на наш discord сервер!</h3>
     <br>
