--- a/tjan.html
+++ b/tjan.html
@@ -87,7 +87,7 @@
     %settings | Как настроить бота
     <br>
     <br>
-    <hr>
+    <br>
     <br>
     Вот команды сервера Broken
     <br>
@@ -117,9 +117,10 @@
     %greensay | Отправить сообщение green
     <br>
     <br>
+    <hr>
     <br>
     <br>
-    Развлекательные команды
+    <h2>Развлекательные команды</h2>
     <br>
     %шишкой в @ник
     <br>
@@ -146,7 +147,7 @@
     <br>
     <br>
     <br>
-    Прикольные команды
+    <h2>Прикольные команды</h2>
     <br>
     %waifu | На сколько бот тебя любит
     <br>
