--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>login</title>
+        <title>ERROR 503</title>
+        <title>Извините, но сервис временно недоступен!</title>
         <link rel="stylesheet" href="csslog/m.css">
     </head>
     <body>
@@ -12,7 +13,7 @@
     <h2>Username</h2> <input type="password" id="L">
             <br>
             <br>
-            <button onclick="exe()"> Login</button>
+            <button onclick="exe()">недоступно</button>
             <p id="tx"></p>
             <p id="txV"></p>
         </div>
@@ -38,19 +39,12 @@
         <br>
         <br>
         <br>
-        <div class=»footer»> <div class=»container»><span class=»sub»>Регистрация | <a href=reg.html>«перейти»</a></span></div>
+        <div class=»footer»> <div class=»container»><span class=»sub»>Регистрация | <a href=index.html>«недоступно»</a></span></div>
 
         <script>
             function exe()
 
-            {
-                var x = document.getElementById("L").value;
-                if(x == "Lalka666") {
-                    document.getElementById("tx").innerHTML= x;
-                    document.location.href = 'profil.html';}
-                if(x == "user") {
-                    document.getElementById("tx").innerHTML= x;
-                    document.location.href = 'userprofile.html';} 
+            
                 
                      {
 
