--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html>
     <head>
         <title>ERROR 503</title>
-        <title>Извините, но сервис временно недоступен!</title>
         <link rel="stylesheet" href="csslog/m.css">
     </head>
     <body>
         <header>
             <div id="logo" onclick="slowScroll('#top')">
     </body>
-    <h1>LOGIN</h1>
-    <h2>Username</h2> <input type="password" id="L">
+    <h1>ERROR 503</h1>
+    <h2>Извините, но сервис временно недоступен!</h2> <input type="password" id="L">
             <br>
             <br>
             <button onclick="exe()">недоступно</button>
