--- a/index.html
+++ b/index.html
@@ -50,6 +50,29 @@
 
         }
     }
+    
+    body {
+    width: 99%;
+    background-image: url(https://img3.akspic.ru/originals/9/3/0/4/6/164039-galaktika_twitch_banner-podergivanie-veb_banner-potokovoe_multimedia-gejmer-1920x1080.jpg);
+    background-blend-mode: multiply;
+    background-color: #2e3a44;
+    background-size: 2000px;   
+    text-align: center;      
+    color: #fff;
+  }
+  
+li {
+    text-align: center; 
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+ul {
+    text-align: center; 
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
        
 
 </script>
