--- a/reg.html
+++ b/reg.html
@@ -9,10 +9,10 @@
 
 <h1>Регистрация</h1>
 
-<b>Для входа на сайт вам нужно ввести секретное имя пользователя.</b>
-<b>Для получения имяни пользователя, перейдите по ссылке ниже, и напишите в лс администратору "Хочу логин"</b>
-<li>Ссылка: <a href="https://vk.com/maknau80" target="_blank">администратор</a> </li>
-Или напишите в дискорд: maknau80#3099
+<b>Для входа на сайт вам нужно ввести имя пользователя.</b>
+<b>Для получения имени пользователя напишите администратору сайта: "Хочу логин"</b>
+<li>Ссылка на страницу администратора: <a href="https://vk.com/maknau" target="_blank">перейти</a> </li>
+Или напишите администратору в дискорд: maknau80#3099
         <br>
         <hr>
         <br>
