--- a/hub.html
+++ b/hub.html
@@ -57,7 +57,7 @@ margin-bottom: 100px;
 
 body {
     width: 99%;
-    background-image: url(https://img.freepik.com/free-photo/3d-abstract-background-with-network-connections-low-poly-plexus-design_1048-11867.jpg?size=626&ext=jpg);
+    background-image: url(https://img3.akspic.ru/originals/1/1/4/9/5/159411-razer_phone-razer-android-zelenyj-svet-1920x1080.jpg);
     background-blend-mode: multiply;
     background-color: #2e3a44;
     background-size: 2000px;   
@@ -88,7 +88,7 @@ ul {
         <h2><p><b>Мы в соц-сетях:</b></p></h2>
         <ul>
             <h3>
-        Наш <a href="https://vk.com/maknau80" target="_blank">Vk</a> &nbsp; &nbsp; &nbsp; &nbsp;
+        Наш <a href="https://vk.com/maknau" target="_blank">Vk</a> &nbsp; &nbsp; &nbsp; &nbsp;
         Наш <a href="https://discord.gg/GzVbsqZ" target="_blank">discord</a> &nbsp; &nbsp; &nbsp; &nbsp;
         Наш <a href="https://www.youtube.com/channel/UCNuR_I6cIWAljDlXPIcgAkA?" target="_blank">youtube</a> &nbsp; &nbsp; &nbsp; &nbsp;
         </ul> </h3>
@@ -98,7 +98,7 @@ ul {
         
         <h2><p><b>Страницы</b></p></h2>
         <h3>
-        <azaz><div class=»footer»> <div class=»container»><span class=»sub»>maknau80 | <a href=l.html>«перейти»</a></span></div>
+        <azaz><div class=»footer»> <div class=»container»><span class=»sub»>maknau80 (закрыто на тех работы) | <a href=hub.html>«недоступно»</a></span></div>
         <div class=»footer»> <div class=»container»><span class=»sub»>music player | <a href=music.html>«перейти»</a></span></div>
         <div class=»footer»> <div class=»container»><span class=»sub»>Owl's hub | <a href=tjan.html>«перейти»</a></span></div>
         <div class=»footer»> <div class=»container»><span class=»sub»>Game clicker | <a href=clicker.html>«перейти»</a></span></div>
@@ -110,7 +110,7 @@ ul {
 
 <hr><br><br><br><br><br><br><br><br><br><h2>Тут пока ничего нет :)</h2><br><br><br><br><br><br><br><br><hr><br>
 
-<div class=»footer»> <div class=»container»><span class=»sub»>© Все права защищены <a href=hub.html>ООО «maknau80 hub»</a> 2019-2021</span></div>
+<div class=»footer»> <div class=»container»><span class=»sub»>© Все права защищены <a href=hub.html>ООО «maknau80 hub»</a> 2019-2022</span></div>
 
 <script type="text/javascript">
 var OpenOrLock = 0;
