--- a/hub.html
+++ b/hub.html
@@ -80,8 +80,8 @@ ul {
 
     </style>
     <body>
-        <h1>Добро пожаловать на сайт maknau80 hub!</h1>
-        <p><b>V1.1!</b></p>
+        <h1>Добро пожаловать на сайт maknau80!</h1>
+        <p><b>V1.5!</b></p>
         <hr>
         
         </a>
