--- a/music.html
+++ b/music.html
@@ -8,8 +8,8 @@
     <body>
 
         <div id="overview">
-            <h1>Лучшие песни 2020</h1>
-            <h4>Внимание! Многие песни из этого списка уже давно устарели! В данном списке будет очень мало песен 2020го года.</h4>
+            <h1>Лучшие песни 2022</h1>
+            <h4>Внимание! Многие песни из этого списка уже давно устарели!</h4>
             <div class="img">
                 <img src="img/pngegg.png" alt="">
               </div>
@@ -61,7 +61,7 @@
     </audio>
 
 <hr>
-    <h5>Список песен ещё будет дополняться! V0.4.0</h5>
+    <h5>Список песен ещё будет дополняться! V0.5</h5>
 
     <div class=»footer»> <div class=»container»><span class=»sub»>Back to <a href=hub.html>«HUB»</a></span></div>
 
