--- a/clicker.html
+++ b/clicker.html
@@ -59,7 +59,7 @@ input {
 margin-top: 50px;
 margin-bottom: 50px;
 padding: 200px;
-background-image: url(https://images.wallpaperscraft.ru/image/fon_nebo_tochki_svet_83482_300x168.jpg);
+background-image: url(https://www.zastavki.com/pictures/1920x1080/2015/Backgrounds_Digital_background_of_neon_stripes_097229_23.jpg);
 background-size: 880px;
 }
 
@@ -78,7 +78,7 @@ padding: 20px;
 
 body {
     width: 99%;
-    background-image: url(https://img.freepik.com/free-photo/3d-abstract-background-with-network-connections-low-poly-plexus-design_1048-11867.jpg?size=626&ext=jpg);
+    background-image: url(https://kartinkin.net/uploads/posts/2021-07/1626291084_34-kartinkin-com-p-fon-dlya-rabochego-stola-neon-krasivo-46.jpg);
     background-blend-mode: multiply;
     background-color: #2e3a44;
     background-size: 2000px;
@@ -103,7 +103,7 @@ padding: 240px;
             <br>
             <button id="levelup" onclick="LevelUp()"> UGRADE: 50$</button>
             <hr>
-<h3>Version: 0.9 | creator: maknau80 | discord server: ---</h3>
+<h3>Version: 1.0 | creator: maknau80 | discord server: Zero Two Home</h3>
          </div>
          <script>
             function insert(num) {
