--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ERROR 503</title>
+        <title>maknau80</title>
         <link rel="stylesheet" href="csslog/m.css">
     </head>
     <body>
@@ -9,10 +9,10 @@
             <div id="logo" onclick="slowScroll('#top')">
     </body>
     <h1>ERROR 503</h1>
-    <h2>Извините, но сервис временно недоступен!</h2> <input type="password" id="L">
+    <h2>Введите имя пользовател</h2> <input type="password" id="L">
             <br>
             <br>
-            <button onclick="exe()">недоступно</button>
+            <button onclick="exe()">Войти</button>
             <p id="tx"></p>
             <p id="txV"></p>
         </div>
@@ -38,7 +38,7 @@
         <br>
         <br>
         <br>
-        <div class=»footer»> <div class=»container»><span class=»sub»>Регистрация | <a href=index.html>«недоступно»</a></span></div>
+        <div class=»footer»> <div class=»container»><span class=»sub»>   <a href=index.html>«Регистрация»</a></span></div>
 
         <script>
             function exe()
