--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>maknau80</title>
+        <title>maknau80 HUB</title>
         <link rel="stylesheet" href="csslog/m.css">
     </head>
     <body>
         <header>
             <div id="logo" onclick="slowScroll('#top')">
     </body>
-    <h1>ERROR 503</h1>
+    <h1>Welcome to maknau80 HUB</h1>
     <h2>Введите имя пользовател</h2> <input type="password" id="L">
             <br>
             <br>
