--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <br>
         <br>
         <br>
-        <div class=»footer»> <div class=»container»><span class=»sub»>   <a href=index.html>«Регистрация»</a></span></div>
+        <div class=»footer»> <div class=»container»><span class=»sub»>   <a href=reg.html>«Регистрация»</a></span></div>
 
         <script>
-            function exe()
+            function exe(<a href=hub.html>)
 
             
                 
