--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Введите имя пользовател</h2> <input type="password" id="L">
             <br>
             <br>
-            <button onclick="<a href=hub.html>">Войти</button>
+           <button onclick="window.location.href='https://maknau80.github.io/hub.html';">Войти на сайт</button>
             <p id="tx"></p>
             <p id="txV"></p>
         </div>
