--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <br>
             <br>
            <button onclick="window.location.href='https://maknau80.github.io/hub.html';">Войти на сайт</button>
+            <button style="height:200px;width:200px"></button>
             <p id="tx"></p>
             <p id="txV"></p>
         </div>
