--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <h2>Введите имя пользовател</h2> <input type="password" id="L">
             <br>
             <br>
-           <button onclick="window.location.href='https://maknau80.github.io/hub.html';">Войти на сайт</button>
-            <button style="height:200px;width:200px"></button>
+           <button onclick="window.location.href='https://maknau80.github.io/hub.html';style="height:200px;width:200px">Войти на сайт</button>
             <p id="tx"></p>
             <p id="txV"></p>
         </div>
