--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
             <div id="logo" onclick="slowScroll('#top')">
     </body>
     <h1>Welcome to maknau80 HUB</h1>
-    <h2>Введите имя пользовател</h2> <input type="password" id="L">
             <br>
             <br>
-           <button onclick="window.location.href='https://maknau80.github.io/hub.html';style="height:200px;width:200px">Войти на сайт</button>
+           <button onclick="window.location.href='https://maknau80.github.io/hub.html';">Войти на сайт</button>
             <p id="tx"></p>
             <p id="txV"></p>
         </div>
