--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
         <br>
         <br>
         <br>
-        <div class=»footer»> <div class=»container»><span class=»sub»>   <a href=reg.html>«Регистрация»</a></span></div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class=»footer»> <div class=»container»><span class=»sub»>   <a href=gg.html>«Информация»</a></span></div>
 
         <script>
             function exe(<a href=hub.html>)
