--- a/gg.html
+++ b/gg.html
@@ -1,1 +1,26 @@
 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Information</title>
+        <link rel="stylesheet" href="csslog/m.css">
+        <meta charset="UTF-8">
+    </head>
+    <body bgcolor="green">
+
+<h1>Информация о сайте</h1>
+
+<b>История создания сайта</b>
+<b>Этот сайт был создан владельцем канала "Помидорка Красная"</b>
+      <b>Первоначально сайт был создан для проявления своих навыков в области программирования сайтов и веб дизайна, но за тем перерос в нечто большее</b>
+      <b>Сейчас сайт существует для демонстрации проэктов maknau80, таких как Discord сервер и Discord бот, работающий уже более двух лет</b>
+<li>Ссылка на страницу администратора: <a href="https://vk.com/maknau" target="_blank">перейти</a> </li>
+Дополнительные контакты: Discord: maknau80#0400 > Gmail: maknau80@gmail.com
+        <br>
+        <hr>
+        <br>
+        <div class=»footer»> <div class=»container»><span class=»sub»>Back to <a href=index.html>«Главная»</a></span></div>
+<script>
+</script>
+</body>
+</html>
