--- a/gg.html
+++ b/gg.html
@@ -11,11 +11,20 @@
 <h1>Информация о сайте</h1>
 
 <b>История создания сайта</b>
-<b>Этот сайт был создан владельцем канала "Помидорка Красная"</b>
+<b>Этот сайт был создан владельцем канала "Помидорка Красная".</b>
+        <br>
       <b>Первоначально сайт был создан для проявления своих навыков в области программирования сайтов и веб дизайна, но за тем перерос в нечто большее</b>
       <b>Сейчас сайт существует для демонстрации проэктов maknau80, таких как Discord сервер и Discord бот, работающий уже более двух лет</b>
 <li>Ссылка на страницу администратора: <a href="https://vk.com/maknau" target="_blank">перейти</a> </li>
 Дополнительные контакты: Discord: maknau80#0400 > Gmail: maknau80@gmail.com
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <hr>
         <br>
