--- a/gg.html
+++ b/gg.html
@@ -13,10 +13,19 @@
 <b>История создания сайта</b>
 <b>Этот сайт был создан владельцем канала "Помидорка Красная".</b>
         <br>
-      <b>Первоначально сайт был создан для проявления своих навыков в области программирования сайтов и веб дизайна, но за тем перерос в нечто большее</b>
+      <b>Первоначально сайт был создан для проявления своих навыков в области программирования сайтов и веб дизайна, но за тем перерос в нечто большее.</b>
+        <br>
       <b>Сейчас сайт существует для демонстрации проэктов maknau80, таких как Discord сервер и Discord бот, работающий уже более двух лет</b>
+        <br>
+        <br>
+        <br>
 <li>Ссылка на страницу администратора: <a href="https://vk.com/maknau" target="_blank">перейти</a> </li>
+        <br>
 Дополнительные контакты: Discord: maknau80#0400 > Gmail: maknau80@gmail.com
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
