--- a/index.html
+++ b/index.html
@@ -8,41 +8,38 @@
         <header>
             <div id="logo" onclick="slowScroll('#top')">
     </body>
-    <h1>Welcome to maknau80 HUB</h1>
+    <h2>Welcome to maknau80 HUB</h2>
             <br>
             <br>
-           <button onclick="window.location.href='https://maknau80.github.io/hub.html';">Войти на сайт</button>
+           
+<button style="padding: 0px;
+color: blue;
+border-radius: 300000000px;
+height: 500px;"
+onclick="window.location.href='https://maknau80.github.io/hub.html';"><img src="enter.png">
+</button>
+
+
             <p id="tx"></p>
             <p id="txV"></p>
         </div>
 
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class=»footer»> <div class=»container»><span class=»sub»>   <a href=gg.html>«Информация»</a></span></div>
+     <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+        <h2> <div class=»footer»> <div class=»container»><span class=»sub»>   <a href=gg.html>«Информация»</a></span></div> </h2>
 
         <script>
             function exe(<a href=hub.html>)
