--- a/hub.html
+++ b/hub.html
@@ -89,7 +89,7 @@ ul {
         <div class=»footer»> <div class=»container»><span class=»sub»>LK music | <a href=music.html>«перейти»</a></span></div>
         <div class=»footer»> <div class=»container»><span class=»sub»>ZTH BOT discord | <a href=tjan.html>«перейти»</a></span></div>
         <div class=»footer»> <div class=»container»><span class=»sub»>Clicker Game | <a href=clicker.html>«перейти»</a></span></div>
-<div class=»footer»> <div class=»container»><span class=»sub»>M8 Games | <a href=games.html>«перейти»</a></span></div>
+<div class=»footer»> <div class=»container»><span class=»sub»>M8 Games | <a href=mgames.html>«перейти»</a></span></div>
 
     <br>
         </azaz>
