--- a/mgames.html
+++ b/mgames.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="keywords" content="Сайт,макнау80,html,HTML">
         <meta name="description" content="сайт макнау80">
-        <link rel="shortcut icon" href="https://iconarchive.com/download/i76049/martz90/circle-addon2/playstation.ico"/>
+        <link rel="shortcut icon" href="gamecontroller.ico"/>
         
     </head>
     <style>
@@ -57,7 +57,7 @@ margin-bottom: 100px;
 
 body {
     width: 99%;
-    background-image: url(https://wallpaper.dog/large/5523211.jpg);
+    background-image: url(https://gamedev.ru/files/images/95584_1395041280_fon_2.jpg);
     background-blend-mode: multiply;
     background-color: #2e3a44;
     background-size: 2000px;   
@@ -184,7 +184,7 @@ onclick="window.location.href='https://maknau80.github.io/hub.html';">Верну
 
 
 
-<p><b> maknau80 games V1.0 ❤ m8 games 2022-2022</b></p>
+<p><b> maknau80 games V1.2 ❤ m8 games 2022-2022</b></p>
 
 
 
