--- a/hub.html
+++ b/hub.html
@@ -83,13 +83,12 @@ ul {
 
 
         
-        <h1><p><b>Проэкты</b></p></h1>
+        <h1><p><b>Страницы</b></p></h1>
         <h2>
         <azaz><div class=»footer»> <div class=»container»><span class=»sub»>maknau80 HOME | <a href=l.html>«перейти»</a></span></div>
         <div class=»footer»> <div class=»container»><span class=»sub»>LK music | <a href=music.html>«перейти»</a></span></div>
         <div class=»footer»> <div class=»container»><span class=»sub»>ZTH BOT discord | <a href=tjan.html>«перейти»</a></span></div>
         <div class=»footer»> <div class=»container»><span class=»sub»>Clicker Game | <a href=clicker.html>«перейти»</a></span></div>
-<div class=»footer»> <div class=»container»><span class=»sub»>M8 Games | <a href=mgames.html>«перейти»</a></span></div>
 
     <br>
         </azaz>
@@ -100,6 +99,15 @@ ul {
 <br>
 <br>
 <br>
+
+<h1><p><b>Проэкты</b></p></h1>
+<h2>
+<div class=»footer»> <div class=»container»><span class=»sub»>M8 Games | <a href=mgames.html>«перейти»</a></span></div>
+ <div class=»footer»> <div class=»container»><span class=»sub»>ZTH BOT discord | <a href=tjan.html>«перейти»</a></span></div>
+ <div class=»footer»> <div class=»container»><span class=»sub»>Discord Server | <a href=ds.html>«перейти»</a></span></div>
+</h2>
+
+
 
 </a>
 
@@ -113,17 +121,7 @@ ul {
 <br>
 <br>
 <br>
-<br> 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 
 
 
