--- a/tjan.html
+++ b/tjan.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Owl community</title>
+        <title>ZTH community</title>
         <link rel="stylesheet" href="">
         <link rel="stylesheet" href="csslog/l.css">
         <meta charset="UTF-8">
     </head>
     <body bgcolor="green">
 
-<h1>Owl's HUB</h1>
-<h2>Discord bot version: 3.6.6</h2>
+<h1>ZTH BOT</h1>
+<h2>Discord bot version: 3.8</h2>
 <hr>
 <h4>
 <h2>Команды доступные всем пользователям</h2>
@@ -164,15 +164,30 @@
     <br>
     <br>
     <br>
-    <h3>Что-бы пригласть нашего бота, зайдите на наш discord сервер!</h3>
+<hr>
+    <h3>От всей команды разработчиков желаем вам удачи в использовании бота!</h3>
     <br>
     <br>
-    <a class="logo" href="https://discord.gg/GzVbsqZ">Добавить бота</a>
-    <br>
-    <br>
+
+
+<button style="padding: 15px;
+color: #8B008B;
+border-radius: 30px;
+height: 50px;"
+onclick="window.location.href='https://discord.gg/pR8vZh3A5m';">Зайти на сервер<img src="">
+</button>
+
+
+<button style="padding: 15px;
+color: #8B008B;
+border-radius: 30px;
+height: 50px;"
+onclick="window.location.href='https://discord.com/oauth2/authorize?client_id=1015729832572747807&scope=bot%20applications.commands&permissions=2146958847';">Пригласить бота<img src="">
+</button>
+
+
     <hr>
-    <br>
-<div class=»footer»> <div class=»container»><span class=»sub»>Back to <a href=hub.html>«HUB»</a></span></div>
+<div class=»footer»> <div class=»container»><span class=»sub»>Back to <a href=hub.html>«Home»</a></span></div>
 <br>
 
 <script>
