--- a/gg.html
+++ b/gg.html
@@ -10,7 +10,8 @@
 
 <h1>Информация о сайте</h1>
 
-<b>История создания сайта</b>
+<h2>История создания сайта</h2>
+ <br>
 <b>Этот сайт был создан владельцем канала "Помидорка Красная".</b>
         <br>
       <b>Первоначально сайт был создан для проявления своих навыков в области программирования сайтов и веб дизайна, но за тем перерос в нечто большее.</b>
@@ -21,7 +22,7 @@
         <br>
 <li>Ссылка на страницу администратора: <a href="https://vk.com/maknau" target="_blank">перейти</a> </li>
         <br>
-Дополнительные контакты: Discord: maknau80#0400 > Gmail: maknau80@gmail.com
+<li>Дополнительные контакты: Discord: maknau80#0400 > Gmail: maknau80@gmail.com </li>
         <br>
         <br>
         <br>
@@ -33,11 +34,17 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <hr>
+      
+     
+ <br>
+ <br>
+ <br>
+ <br>
+ <br>
         <br>
         <div class=»footer»> <div class=»container»><span class=»sub»>Back to <a href=index.html>«Главная»</a></span></div>
+<br> 
+<b>Все права защищены ООО "maknau80 HUB" 2019-2022</b>
 <script>
 </script>
 </body>
