--- a/tjan.html
+++ b/tjan.html
@@ -6,7 +6,15 @@
         <link rel="stylesheet" href="csslog/l.css">
         <meta charset="UTF-8">
     </head>
-    <body bgcolor="green">
+    <body 
+    width: 99%;
+    background-image: url(https://assets.turbologo.ru/blog/ru/2021/10/30071021/background4.png);
+    background-blend-mode: multiply;
+    background-color: #2e3a44;
+    background-size: 3000px;
+    text-align: center;
+    color: #fff;>
+
 
 <h1>ZTH BOT</h1>
 <h2>Discord bot version: 3.8</h2>
